2013-09-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Negative stack adjustment efficiency, restore stack pointer from frame pointer.
	* src/stm8/peep.c:
	  Provide our own isblank()-substitute for compilers that lack C99 support.

2013-09-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/mappings.i,
	  src/z80/peep.c:
	  Stack adjustment code refactoring.

2013-09-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  src/port.h,
	  src/z80/main.c,
	  src/z80/peep.c,
	  src/z80/z80.h,
	  src/z80/gen.c,
	  src/z80/peep.c:
	  Preparations for TLCS-90 port.

2013-09-09 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/addrspace.c:
	  Disable test for host regression tests.
	* src/stm8/gen.c:
	  Make it compile on compilers that lack C99 support.

2013-09-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  src/SDCCmem.c,
	  src/SDCCglue.c,
	  doc/sdccman.lyx,
	  support/regression/tests/addrspace.c:
	  Support for const named address spaces (for variables in ROM).
	* src/z80/peeph-z80.def,
	  src/z80/peeph-r2k.def:
	  Check for volatile in peephole 1.

2013-09-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix bug #2211, fix name of codegen struct (_G vs. G).

2013-09-04 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bitvars.c,
	  support/regression/tests/bool.c,
	  support/regression/tests/bug1057979.c,
	  support/regression/tests/bug1738367.c,
	  support/regression/tests/bug2084206.c,
	  support/regression/tests/bug2935162.c,
	  support/regression/tests/bug3183823.c,
	  support/regression/tests/bug3290691.c,
	  support/regression/tests/bug3467508.c,
	  support/regression/tests/bug3537338.c,
	  support/regression/tests/float_single.c,
	  support/regression/tests/gcc-torture-execute-20000412-2.c,
	  support/regression/tests/gcc-torture-execute-20030714-1.c,
	  support/regression/tests/gcc-torture-execute-990524-1.c,